tests/chapter_17/invalid_types/incomplete_types/subscript_void.c
// you can't subscript pointers to void
// although Clang/GCC allow this as a language extension
int main(void) {
  int x = 10;
  void *v = &x;
  v[0];
  return 0;
}